Get CSRF_TRUSTED_ORIGINS from env variable

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -23,6 +23,7 @@ services:
       DEBUG: "${DJANGO_DEBUG}"
       SECRET_KEY: "${DJANGO_SECRET_KEY}"
       ALLOWED_HOSTS: "${DJANGO_ALLOWED_HOSTS}"
+      CSRF_TRUSTED_ORIGINS: "${DJANGO_CSRF_TRUSTED_ORIGINS}"
       DATABASE_HOST: "${DATABASE_HOST}"
       DATABASE_PORT: "${DATABASE_PORT}"
       DATABASE_NAME: "${DATABASE_NAME}"
