--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ DATABASE_PASSWORD=admin
 DJANGO_DEBUG=1
 DJANGO_SECRET_KEY=
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost:8080 http://127.0.0.1:8080
